@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Sat Jul 07 13:10:02 PDT 2012
-build.number=535
+#Sun Jul 08 01:03:55 PDT 2012
+build.number=542
